--- a/ClientManagement/ClientManagement/Web.config
+++ b/ClientManagement/ClientManagement/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-ClientManagement-20141108153551;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-ClientManagement-20141108153551.mdf" providerName="System.Data.SqlClient" />
+    <add name="CLIENT_MANAGEMENTEntities" connectionString="metadata=res://*/Models.ClientManagementModel.csdl|res://*/Models.ClientManagementModel.ssdl|res://*/Models.ClientManagementModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\CLIENT_MANAGEMENT.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -19,7 +20,11 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.5" />
+    <compilation debug="true" targetFramework="4.5">
+      <assemblies>
+        <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+      </assemblies>
+    </compilation>
     <httpRuntime targetFramework="4.5" />
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
