--- a/ClientManagement/ClientManagement/ClientManagement.csproj
+++ b/ClientManagement/ClientManagement/ClientManagement.csproj
@@ -171,27 +171,30 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
-    <Compile Include="Models\ClientManagementModel.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>ClientManagementModel.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\ClientManagementModel.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>ClientManagementModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\ClientManagementModel.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>ClientManagementModel.edmx</DependentUpon>
+    <Compile Include="Models\CLIENT.cs">
+      <DependentUpon>CLIENT_MANAGEMENT.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\ClientModel.cs" />
+    <Compile Include="Models\CLIENT_MANAGEMENT.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>CLIENT_MANAGEMENT.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\CLIENT_MANAGEMENT.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>CLIENT_MANAGEMENT.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\CLIENT_MANAGEMENT.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>CLIENT_MANAGEMENT.edmx</DependentUpon>
+    </Compile>
     <Compile Include="Models\USER.cs">
-      <DependentUpon>ClientManagementModel.tt</DependentUpon>
+      <DependentUpon>CLIENT_MANAGEMENT.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\USER_TYPE.cs">
-      <DependentUpon>ClientManagementModel.tt</DependentUpon>
+      <DependentUpon>CLIENT_MANAGEMENT.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -266,22 +269,22 @@
     <Content Include="Content\toastr.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
-    <EntityDeploy Include="Models\ClientManagementModel.edmx">
+    <EntityDeploy Include="Models\CLIENT_MANAGEMENT.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>ClientManagementModel.Designer.cs</LastGenOutput>
+      <LastGenOutput>CLIENT_MANAGEMENT.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <Content Include="Models\ClientManagementModel.Context.tt">
+    <Content Include="Models\CLIENT_MANAGEMENT.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>ClientManagementModel.edmx</DependentUpon>
-      <LastGenOutput>ClientManagementModel.Context.cs</LastGenOutput>
+      <DependentUpon>CLIENT_MANAGEMENT.edmx</DependentUpon>
+      <LastGenOutput>CLIENT_MANAGEMENT.Context.cs</LastGenOutput>
     </Content>
-    <Content Include="Models\ClientManagementModel.edmx.diagram">
-      <DependentUpon>ClientManagementModel.edmx</DependentUpon>
+    <Content Include="Models\CLIENT_MANAGEMENT.edmx.diagram">
+      <DependentUpon>CLIENT_MANAGEMENT.edmx</DependentUpon>
     </Content>
-    <Content Include="Models\ClientManagementModel.tt">
+    <Content Include="Models\CLIENT_MANAGEMENT.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>ClientManagementModel.edmx</DependentUpon>
-      <LastGenOutput>ClientManagementModel.cs</LastGenOutput>
+      <DependentUpon>CLIENT_MANAGEMENT.edmx</DependentUpon>
+      <LastGenOutput>CLIENT_MANAGEMENT.cs</LastGenOutput>
     </Content>
     <None Include="Scripts\jquery-1.7.1.intellisense.js" />
     <Content Include="Scripts\backbone.js" />
