--- a/ClientManagement/ClientManagement/Web.config
+++ b/ClientManagement/ClientManagement/Web.config
@@ -10,7 +10,8 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-ClientManagement-20141108153551;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-ClientManagement-20141108153551.mdf" providerName="System.Data.SqlClient" />
-  <add name="CLIENT_MANAGEMENTEntities" connectionString="metadata=res://*/Models.CLIENT_MANAGEMENT.csdl|res://*/Models.CLIENT_MANAGEMENT.ssdl|res://*/Models.CLIENT_MANAGEMENT.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\CLIENT_MANAGEMENT.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="CLIENT_MANAGEMENTEntities" connectionString="metadata=res://*/Models.CLIENT_MANAGEMENT.csdl|res://*/Models.CLIENT_MANAGEMENT.ssdl|res://*/Models.CLIENT_MANAGEMENT.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\CLIENT_MANAGEMENT.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
